Changed app name to SMS Router and localized app name

--- a/app/src/main/res/values-tr/strings.xml
+++ b/app/src/main/res/values-tr/strings.xml
@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+    <string name="app_name">SMS Yönlendirici</string>
+
     <!-- UI related data -->
     <eat-comment />
     <string name="tf_from_hint">Gönderici</string>
