--- a/app/src/main/res/values-tr/strings.xml
+++ b/app/src/main/res/values-tr/strings.xml
@@ -16,6 +16,6 @@
 
     <!-- Auto message -->
     <eat-comment />
-    <string name="auto_msg_text">Merhaba, bu bir otomatik mesajdır. Lütfen cevaplamayınız.\n
-Belirtilen modele uygun şu ifadeleri buldum: </string>
+    <string name="auto_msg_text">"Merhaba, bu bir otomatik mesajdır. Lütfen cevaplamayınız.
+Belirtilen modele uygun şu ifadeleri buldum: %1$s"</string>
 </resources>
