Added save toast for better ux

--- a/app/src/main/res/values-tr/strings.xml
+++ b/app/src/main/res/values-tr/strings.xml
@@ -8,6 +8,7 @@
     <string name="tf_to_hint">Alıcı</string>
     <string name="tf_pattern_hint">Model</string>
     <string name="btn_save_text">Kaydet</string>
+    <string name="toast_save_text">Başarıyla kaydedildi</string>
 
     <!-- Error messages -->
     <eat-comment />
