--- a/app/src/main/res/values-tr/strings.xml
+++ b/app/src/main/res/values-tr/strings.xml
@@ -2,12 +2,18 @@
 <resources>
     <string name="app_name">SMS Yönlendirici</string>
 
-    <!-- UI related data -->
+    <!--Text fields -->
     <eat-comment />
     <string name="tf_from_hint">Gönderici</string>
     <string name="tf_to_hint">Alıcı</string>
     <string name="tf_pattern_hint">Model</string>
+
+    <!-- Buttons -->
+    <eat-comment />
     <string name="btn_save_text">Kaydet</string>
+
+    <!-- Toasts -->
+    <eat-comment />
     <string name="toast_save_text">Başarıyla kaydedildi</string>
 
     <!-- Error messages -->
