Fix broadcast receiver dying after 1-2 days

--- a/app/src/main/res/values-tr/strings.xml
+++ b/app/src/main/res/values-tr/strings.xml
@@ -14,7 +14,8 @@
 
     <!-- Toasts -->
     <eat-comment />
-    <string name="toast_save_text">Başarıyla kaydedildi</string>
+    <string name="toast_save_successful">Başarıyla kaydedildi</string>
+    <string name="toast_save_failed">Kaydetme başarısız</string>
 
     <!-- Error messages -->
     <eat-comment />
